--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,6 @@
     <div id="root"></div>
     <div id="modal"></div>
 
-    <script src="../src/script.js"></script>
+    <script src="../src/index.js"></script>
   </body>
 </html>
